# Tar01-Algoritmos-A-star-y-Min-max

./: Astar-MinMax.ipynb  Astar.ipynb  Documentacion.md  min_max_lines_and_boxes.ipynb  pyproject.toml
